--- a/phase1/app/src/main/res/layout/activity_main.xml
+++ b/phase1/app/src/main/res/layout/activity_main.xml
@@ -32,13 +32,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="264dp"
         android:layout_marginTop="264dp"
-        android:onClick="playTileGameView"
+        android:onClick="playReactionGame"
         android:text="ReactionGame"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
