--- a/phase1/app/src/main/res/layout/activity_picture_game.xml
+++ b/phase1/app/src/main/res/layout/activity_picture_game.xml
@@ -4,6 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PictureGame">
+    tools:context=".PictureGameActivity">
+
+    <EditText
+        android:id="@+id/guessEditText"
+        android:layout_width="217dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/drawing_guess_message"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guessResultText" />
+
+    <Button
+        android:id="@+id/enterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="onEnterGuessPressed"
+        android:text="@string/enter_button"
+        app:layout_constraintBaseline_toBaselineOf="@+id/guessEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toEndOf="@+id/guessEditText"
+        tools:text="@string/enter_button" />
+
+    <ImageView
+        android:id="@+id/imageToGuess"
+        android:layout_width="254dp"
+        android:layout_height="275dp"
+        android:layout_marginTop="120dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/frog" />
+
+    <TextView
+        android:id="@+id/guessResultText"
+        android:layout_width="257dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="32dp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageToGuess" />
+
+    <Button
+        android:id="@+id/continueButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="onNextButtonPressed"
+        android:text="@string/continue_button"
+        app:layout_constraintBaseline_toBaselineOf="@+id/guessEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toEndOf="@+id/guessEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
