--- a/phase1/app/src/main/res/layout/activity_tile_game_instructions.xml
+++ b/phase1/app/src/main/res/layout/activity_tile_game_instructions.xml
@@ -124,7 +124,8 @@
         android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructions4"
-        app:srcCompat="@drawable/flipped_wrong" />
+        app:srcCompat="@drawable/flipped_wrong"
+        android:contentDescription="incorrect tile" />
 
     <ImageView
         android:id="@+id/imageView4"
