--- a/phase1/app/src/main/res/layout/activity_tile_game.xml
+++ b/phase1/app/src/main/res/layout/activity_tile_game.xml
@@ -4,134 +4,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TileGame">
+    tools:context=".TileGameActivity">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_width="125dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="36dp"
         android:text="Memory Game"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/tile2"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/tile3"
         app:layout_constraintHorizontal_bias="0.421"
-        app:layout_constraintStart_toEndOf="@+id/button1"
-        app:layout_constraintTop_toBottomOf="@+id/lives" />
+        app:layout_constraintStart_toEndOf="@+id/tile1"
+        app:layout_constraintTop_toBottomOf="@+id/livesText" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/tile1"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lives" />
+        app:layout_constraintTop_toBottomOf="@+id/livesText" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/tile3"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lives" />
+        app:layout_constraintTop_toBottomOf="@+id/livesText" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/tile4"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/tile2" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/tile5"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
-        app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintEnd_toStartOf="@+id/tile6"
+        app:layout_constraintStart_toEndOf="@+id/tile4"
+        app:layout_constraintTop_toBottomOf="@+id/tile2" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/tile6"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/tile2" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/tile7"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/tile5" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/tile8"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/button9"
-        app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintEnd_toStartOf="@+id/tile9"
+        app:layout_constraintStart_toEndOf="@+id/tile7"
+        app:layout_constraintTop_toBottomOf="@+id/tile5" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/tile9"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/unflipped"
-        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/tile5" />
 
     <TextView
-        android:id="@+id/lives"
+        android:id="@+id/livesText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:text="Lives Remaining: 3/3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <TextView
+        android:id="@+id/resultText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tile8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
