--- a/phase1/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase1/app/src/main/res/layout/activity_reaction_time.xml
@@ -24,9 +24,10 @@
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.408" />
 
     <TextView
         android:id="@+id/titleText"
@@ -42,7 +43,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        app:layout_constraintVertical_bias="0.078" />
 
     <TextView
         android:id="@+id/continueText"
@@ -62,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/instructionText" />
 
     <TextView
-        android:id="@+id/countText"
+        android:id="@+id/numLevelsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="13dp"
@@ -84,7 +85,7 @@
         android:text="0ms"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/countText"
+        app:layout_constraintEnd_toStartOf="@+id/numLevelsText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
