--- a/phase1/app/src/main/res/layout/activity_main.xml
+++ b/phase1/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="continueGame"
         android:text="Resume Game"
         app:layout_constraintBottom_toTopOf="@+id/checkStat"
         app:layout_constraintEnd_toEndOf="parent"
