--- a/phase1/app/src/main/res/layout/activity_statistics.xml
+++ b/phase1/app/src/main/res/layout/activity_statistics.xml
@@ -10,12 +10,12 @@
         android:id="@+id/continueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="188dp"
+        android:layout_marginTop="156dp"
         android:onClick="onContinuePressed"
         android:text="@string/continue_button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rankingText" />
 
     <TextView
         android:id="@+id/title"
@@ -29,4 +29,64 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/pointsText"
+        android:layout_width="115dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:text="Total Points:"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
+
+    <TextView
+        android:id="@+id/pointsValue"
+        android:layout_width="115dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="64dp"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/pointsText"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/rankingValue"
+        android:layout_width="115dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="64dp"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/rankingText"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/playtimeValue"
+        android:layout_width="115dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="64dp"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/playtimeText"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/playtimeText"
+        android:layout_width="129dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="28dp"
+        android:text="Total Playtime:"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pointsText" />
+
+    <TextView
+        android:id="@+id/rankingText"
+        android:layout_width="115dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="32dp"
+        android:text="Ranking:"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playtimeText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
