--- a/phase1/app/src/main/res/layout/activity_main.xml
+++ b/phase1/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:onClick="checkStats"
         android:text="Check Personal Records"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
