--- a/phase1/app/src/main/res/layout/activity_picture_game.xml
+++ b/phase1/app/src/main/res/layout/activity_picture_game.xml
@@ -41,12 +41,33 @@
         android:id="@+id/imageToGuess"
         android:layout_width="254dp"
         android:layout_height="275dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText5"
+        app:layout_constraintTop_toBottomOf="@+id/numAttemptsText"
         app:srcCompat="@drawable/frog" />
+
+    <TextView
+        android:id="@+id/numAttemptsLabel"
+        android:layout_width="197dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="80dp"
+        android:text="Number of Attempts:"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageToGuess"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText5"
+        app:layout_constraintVertical_bias="0.543" />
+
+    <TextView
+        android:id="@+id/numAttemptsText"
+        android:layout_width="75dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="60dp"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/numAttemptsLabel"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/guessResultText"
@@ -76,13 +97,14 @@
         android:id="@+id/titleText5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="52dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Picture Game"
         android:textColor="#636363"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/instructionText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.078" />
