Worked on and improved the content and display of the Picture Game Instructions page.

--- a/phase1/app/src/main/res/layout/activity_picture_instructions.xml
+++ b/phase1/app/src/main/res/layout/activity_picture_instructions.xml
@@ -10,13 +10,14 @@
         android:id="@+id/titleText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Picture Game"
         android:textColor="#636363"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/instructionText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.078" />
@@ -25,24 +26,25 @@
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Instructions"
+        android:layout_marginTop="8dp"
+        android:text="Welcome to Picture Game!"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText4" />
 
     <TextView
         android:id="@+id/instructionsText"
-        android:layout_width="220dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="64dp"
-        android:text="(instructions)"
+        android:layout_width="296dp"
+        android:layout_height="409dp"
+        android:layout_marginTop="24dp"
+        android:text="Here you will be given a series of pictures among which a variety of woodland creatures are hiding. It is your job to deem correctly what creature lies within the lines. You will have five guesses to correctly determine the given animal. Each consecutive level has increasingly difficult images for you to guess. Good luck!"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title2" />
 
@@ -50,7 +52,7 @@
         android:id="@+id/gotItButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="28dp"
         android:onClick="onGotItPressed"
         android:text="@string/got_it_button"
         android:textAllCaps="false"
