--- a/phase1/app/src/main/res/layout/activity_main.xml
+++ b/phase1/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,15 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="168dp"
+        android:onClick="playRunningGame"
+        android:text="Running"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
