--- a/phase1/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase1/app/src/main/res/layout/activity_reaction_time.xml
@@ -8,7 +8,7 @@
     android:layout_centerHorizontal="true"
     android:background="@color/menu_blue"
     android:onClick="screenTapped"
-    tools:context=".ReactionTime">
+    tools:context=".ReactionGame.ReactionTime">
 
     <TextView
         android:id="@+id/instructionText"
