--- a/phase1/app/src/main/res/layout/activity_tile_game_instructions.xml
+++ b/phase1/app/src/main/res/layout/activity_tile_game_instructions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TileGameInstructions">
+    tools:context=".TileGame.TileGameInstructions">
 
     <TextView
         android:id="@+id/titleText2"
@@ -187,9 +187,11 @@
         android:layout_marginTop="16dp"
         android:onClick="playTileGameView"
         android:text="Start!"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instructions11" />
+        app:layout_constraintTop_toBottomOf="@+id/instructions11"
+        app:layout_constraintVertical_bias="0.111" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
