Reorganized packages of the games. Created a package for the hangman game, and moved all game packages and abstract game class to a single package.

--- a/phase2/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase2/app/src/main/res/layout/activity_reaction_time.xml
@@ -8,7 +8,7 @@
     android:layout_centerHorizontal="true"
     android:background="@color/menu_blue"
     android:onClick="screenTapped"
-    tools:context=".ReactionGame.ReactionTime">
+    tools:context=".Games.ReactionGame.ReactionTime">
 
     <TextView
         android:id="@+id/instructionText"
