--- a/phase2/app/src/main/res/layout/activity_endless_runner.xml
+++ b/phase2/app/src/main/res/layout/activity_endless_runner.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ourgame.RunningGame.EndlessRunnerActivity">
+    tools:context=".Games.RunningGame.EndlessRunnerActivity">
 
-    <com.example.ourgame.RunningGame.EndlessRunner
+    <com.example.ourgame.Games.RunningGame.EndlessRunner
         android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-    </com.example.ourgame.RunningGame.EndlessRunner>
+    </com.example.ourgame.Games.RunningGame.EndlessRunner>
 </FrameLayout>
