--- a/phase2/app/src/main/res/layout/activity_picture_game.xml
+++ b/phase2/app/src/main/res/layout/activity_picture_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PictureGame.PictureGameActivity">
+    tools:context=".Games.PictureGame.PictureGameActivity">
 
     <EditText
         android:id="@+id/guessEditText"
